.jjconflict-base-0/apps/hermes-agent/gateway/components/api/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hermes-agent-gateway
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/instance: hermes-agent-dashboard
              app.kubernetes.io/name: hermes-agent
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: hermes-agent-gateway
      app.kubernetes.io/name: hermes-agent
  policyTypes:
    - Ingress
